# PersonalCodeScanner

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PersonalCode.cpp
app/src/main/cpp/libs/: C_CkAsn.h  C_CkAsnW.h  C_CkAtom.h  C_CkAtomW.h  C_CkAuthAws.h  C_CkAuthAwsW.h  C_CkAuthAzureAD.h  C_CkAuthAzureADW.h  C_CkAuthAzureSAS.h  C_CkAuthAzureSASW.h  C_CkAuthAzureStorage.h  C_CkAuthAzureStorageW.h  C_CkAuthGoogle.h  C_CkAuthGoogleW.h  C_CkAuthUtil.h  C_CkAuthUtilW.h  C_CkBinData.h  C_CkBinDataW.h  C_CkBounce.h  C_CkBounceW.h  C_CkByteData.h  C_CkBz2.h  C_CkBz2W.h  C_CkCache.h  C_CkCacheW.h  C_CkCert.h  C_CkCertChain.h  C_CkCertChainW.h  C_CkCertStore.h  C_CkCertStoreW.h  C_CkCertW.h  C_CkCgi.h  C_CkCgiW.h  C_CkCharset.h  C_CkCharsetW.h  C_CkCompression.h  C_CkCompressionW.h  C_CkCreateCS.h  C_CkCreateCSW.h  C_CkCrypt2.h  (+376 more)
app/src/main/java/com/personalcode/demo/: Principal.java  Validacion.java
app/src/main/res/layout/: layout_principal.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
